# LLM-FineTunning

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
data/: 1-non_instruction_data.txt  2-instruction_dataset.jsonl  3-preference_dataset.jsonl
notebooks/: 1-non_instruction_finetuning.ipynb  2-instruction_finetuning.ipynb  3-dpo_alignment.ipynb
reports/: base_model_answers_raw.json  base_model_evaluation.md  dpo_model_answers_raw.json  final_evaluation.md  fine_tuning_explanation.md  sft_model_answers_raw.json  sft_model_comparison.md
specs/: 001-homeowners-insurance-finetune.md  002-unsloth-ca-homeowners-finetune.md
src/: data_utils.py  generation_utils.py  inference.py  model_utils.py  prompts.py
