[project]
name = "llm-finetunning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "LLM-FineTunning",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "gradio>=6.20.0",
    "huggingface-hub>=1.23.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.21",
    "torch>=2.13.0",
    "transformers>=5.14.1",
]
